--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 }
 
 .card {
-  max-width: 300px;
+  max-width: 380px;
   width: 100%;
   
   position: relative;
@@ -22,16 +22,22 @@
 }
 
 .card__category {
+  width: 115px;
+  
   position: absolute;
   top: 0;
   right: 0;
 
   background-color: #7fff00;
-  padding: 3px 25px;
-  border-radius: 0 5px 0 5px;
+  border-radius: 0 5px 0 0;
+  
+  padding: 5px 25px;
   
   font-weight: 600;
   letter-spacing: 0.7px;
+  text-transform: uppercase;
+  font-size: 13px;
+  text-align: center;
 }
 
 .card__section {
@@ -53,13 +59,18 @@
 
 .card__title {
   margin: 0;
+  text-align: center;
+}
+
+.card__text {
+  text-align: center;
 }
 
 .card__button {
-  padding: 5px 20px;
+  padding: 5px 35px;
   background: #18dc0e;
   
-  margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 5px;
   border: none;
   box-shadow: 1px 1px 4px #EEE;
@@ -79,16 +90,57 @@
 }
 
 .card__description {
-  max-width: 130px;
+  max-width: 150px;
   width: 100%;
 
-  text-align: center;
-
   margin-top: 20px;
+  padding-left: 10px;
 }
 
-@media (max-width: 320px) {
+.card__actions {
+  max-width: 130px;
+  width: 100%;
+  text-align: center;
+}
+
+.card__stars {
+  width: 94px;
+  height: 20px;
+
+  background-size: 260%;
+  background-repeat: no-repeat;
+  background-position: -137px -9px;
+  
+  margin: 0 auto;
+  margin-bottom: 16px;
+}
+
+@media (max-width: 415px) {
   .card__description {
-    max-width: 115px;
+      max-width: 115px;
+  }
+
+  .card__text {
+    text-align: center;
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 380px) {
+  .card__image {
+    max-width: 80px;
+    width: 100%;
+  }
+
+  .card__category {
+    width: 90px;
+  }
+
+  .card__actions {
+    max-width: 100px;
+  }
+
+  .card__button {
+    padding: 5px 20px;
   }
 }
